1.7.1:
- Fix height of bottom sheets in landscape mode
- Bug fixes and improvements

1.7.0:
- Swedish translation (thanks contributors!)
- Front camera setting (e.g. for tablets)
- Improved feedback
- Removed shopping list shortcut due to shortcut limit in most launchers
- Bug fixes and improvements

1.6.0:
- Purchase all items in shopping list
- Fixed sync bug in shopping list
- Updated translations
- Bug fixes and improvements

1.5.0:
- Our app is now translatable: Visit us on GitHub for more information
- French translation (thanks prohand!)
- German translation
- Offline indicator in shopping mode
- Clear only done items in shopping list
- Bug fixes and improvements

1.4.2:
- Fix jump to top on sync in shopping mode
- New OPEN icon
- Improved navigation
- Debugging tools in settings
- Bug fixes and improvements

1.4.1:
- Camera crash fixed
- In-app help with initial FAQ
- Setting for changing update interval in shopping mode
- Bug fixes and improvements

1.4.0:
- Full shopping list support with offline mode
- In-store shopping mode with big UI elements
- Disabled features with Grocy config
- Improved screen rotation support
- Switching between consume, open and purchase in scan mode
- Over 340 improvements and bug fixes

1.3.0:
- Open Food Facts integration
- Editable bottom notes of shopping lists
- Dense stock overview in landscape mode
- Proper purchase to stock amount calculation
- Bug fixes and improvements

1.2.0:
- Create and edit shopping list entries
- Add stock items to shopping list
- Indicate "on shopping list" in stock overview
- Edit product description
- Grocy version incompatibility information
- HTTP support
- Bug fixes and improvements

1.1.0:
- Switch between scan modes
- Price history
- Scanning with haptic feedback
- Clear shopping lists
- Auto fill login with recent credentials
- Proper color contrasts
- Bug fixes and improvements